--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Cursos_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Cursos_admin.html
@@ -1,36 +1,106 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
-
+    <!-- HEADER -->
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
       <h1 class="w3-xxxlarge w3-text-red"><b>Cursos</b></h1>
       <hr style="width:50px;border:5px solid red" class="w3-round">
-      <h3>Seleccione un curso</h3>
     </div>
 
-    <!--Cajas cursos-->
-    <div class="w3-row-padding w3-center w3-margin-top">
-      <div class="w3-quarter w3-margin-top">
-        <button onclick="document.getElementById('gestionar').style.display='block'"
-          class="w3-card w3-container w3-hover-shadow w3-light-gray" style="max-height:380px;min-height: 317px">
+    <!-- CONTENT -->
+    <div class="w3-container"> <!-- For alignment purpuses -->
+      <div class="w3-row w3-center w3-margin-top"> <!-- The fisrt row of cursos -->
+        <!-- Carta de un curso -->
+        <div class="w3-quarter">
+          <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+            onclick="document.getElementById('gestionar').style.display='block'"
+            style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+            <h3>Nombre de curso</h3><br>
+            <i class="fas fa-book" style="font-size:60px;"></i>
+            <p>Código</p>
+            <p>Sección</p>
+            <p>Semestre y año </p>
+            <div class="w3-row w3-center">
+              <button class="w3-btn w3-red">Modificar</button>
+              <button class="w3-btn w3-red">Eliminar</button>
+            </div>
+          </div>
+        </div>
+        <!-- Carta de un curso -->
+        <div class="w3-quarter">
+            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+              onclick="document.getElementById('gestionar').style.display='block'"
+              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+              <h3>Nombre de curso</h3><br>
+              <i class="fas fa-book" style="font-size:60px;"></i>
+              <p>Código</p>
+              <p>Sección</p>
+              <p>Semestre y año </p>
+              <div class="w3-row w3-center">
+                <button class="w3-btn w3-red">Modificar</button>
+                <button class="w3-btn w3-red">Eliminar</button>
+              </div>
+            </div>
+          </div>
+          <!-- Carta de un curso -->
+        <div class="w3-quarter">
+            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+              onclick="document.getElementById('gestionar').style.display='block'"
+              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+              <h3>Nombre de curso</h3><br>
+              <i class="fas fa-book" style="font-size:60px;"></i>
+              <p>Código</p>
+              <p>Sección</p>
+              <p>Semestre y año </p>
+              <div class="w3-row w3-center">
+                <button class="w3-btn w3-red">Modificar</button>
+                <button class="w3-btn w3-red">Eliminar</button>
+              </div>
+            </div>
+          </div>
+          <!-- Carta de un curso -->
+        <div class="w3-quarter">
+            <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+              onclick="document.getElementById('gestionar').style.display='block'"
+              style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+              <h3>Nombre de curso</h3><br>
+              <i class="fas fa-book" style="font-size:60px;"></i>
+              <p>Código</p>
+              <p>Sección</p>
+              <p>Semestre y año </p>
+              <div class="w3-row w3-center">
+                <button class="w3-btn w3-red">Modificar</button>
+                <button class="w3-btn w3-red">Eliminar</button>
+              </div>
+            </div>
+          </div>
+          <!-- Carta de un curso -->
+        <div class="w3-quarter">
+          <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+            onclick="document.getElementById('gestionar').style.display='block'"
+            style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+            <h3>Nombre de curso</h3><br>
+            <i class="fas fa-book" style="font-size:60px;"></i>
+            <p>Código</p>
+            <p>Sección</p>
+            <p>Semestre y año </p>
+            <div class="w3-row w3-center">
+              <button class="w3-btn w3-red">Modificar</button>
+              <button class="w3-btn w3-red">Eliminar</button>
+            </div>
+          </div>
+        </div>
+        <!--Carta de agregar-->
+        <div class="w3-quarter">
+          <div class="w3-card-2 w3-hover-shadow w3-light-gray w3-border w3-round"
+            onclick="document.getElementById('agregar').style.display='block'"
+            style="max-height:400px;min-height: 350px;max-width: 200px;margin-top: 16px;">
+            <h3>Agregar curso nuevo</h3><br>
+            <i class="fas fa-plus" style="font-size:60px;"></i>
+          </div>
+        </div>
+      </div><!-- Fin de primera fila -->
 
-          <h3>Nombre de curso</h3><br>
-          <i class="fas fa-book" style="font-size:100px"></i>
-          <p>Código</p>
-          <p>Sección</p>
-          <p>Semestre y año </p>
-          <button class="w3-btn w3-red">Modificar</button>
-          <button class="w3-btn w3-red">Eliminar</button>
-        </button>
-      </div>
-    </div>
-      <!--Caja de agregar-->
-      <div class="w3-quarter w3-margin-top">
-        <button onclick="document.getElementById('agregar').style.display='block'"
-          class="w3-card w3-container w3-light-gray w3-hover-shadow" style="min-height: 317px">
-          <h3>Agregar curso nuevo</h3><br>
-          <i class="fas fa-plus" style="font-size:100px;text-align: center; padding:50px"></i>
-        </button>
-      </div>
+      <!-- POPUP: Caja de agregar-->
       <div id="agregar" class="w3-modal">
         <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
           <div class="w3-center"><br>
@@ -59,7 +129,6 @@
               </div>
             </form>
           </div>
-          <!--cierre de cajas de cursos-->
         </div>
       </div>
 
