--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
@@ -1,16 +1,10 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
-
-    <!-- !PAGE CONTENT! -->
-    <div class="w3-main" style="margin-left:340px;margin-right:40px" <!-- Portada -->
-        <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-            <h1 class="w3-xxxlarge w3-text-red"><b>Evaluadores</b></h1>
-            <hr style="width:50px;border:5px solid red" class="w3-round">
-            <p>
-                <h3>Seleccione un evaluador
-            </p>
-            </h2>
-        </div>
+    <!-- HEADER -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Evaluadores</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
         <!--Cajas evaluadores-->
         <div class="w3-row-padding w3-center w3-margin-top">
