--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
@@ -1,13 +1,12 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
+    <!-- HEADER -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
-    <!-- !PAGE CONTENT! -->
-    <div class="w3-main" style="margin-left:340px;margin-right:40px" <!-- Portada -->
-        <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-            <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
-            <hr style="width:50px;border:5px solid red" class="w3-round">
-        </div>
-
+    <!-- CONTENT -->
         <div class="w3-container">
             <form action={% url 'ficha_rubrica_admin' %}>
                 <button class="w3-button w3-large w3-red w3-right w3-round">Agregar nueva rúbrica</button>
