--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_select.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_select.html
@@ -1,12 +1,11 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
 
-    <!-- !PAGE CONTENT! -->
-    <div class="w3-main" style="margin-left:340px;margin-right:40px" <!-- Portada -->
-        <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-            <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
-            <hr style="width:50px;border:5px solid red" class="w3-round">
-        </div>
+    <!-- HEADER -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
         <!--Seccion rubricas-->
 
