--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador.html
@@ -1,10 +1,11 @@
 {% extends 'EvPresentaciones/BASE/base.html' %}
 {% block contenido %}
+    <!-- HEADER -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Ficha de rúbrica</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:340px;margin-right:40px">
-
-    <h1 class="w3-xxxlarge w3-text-red" style="margin: 2%;"><b>Ficha de rúbrica</b></h1>
     <div class="w3-row w3-container">
         <div class="w3-col">
 
