--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluadores_admin.html
@@ -10,24 +10,57 @@
         <div class="w3-row-padding w3-center w3-margin-top">
             <div class="w3-quarter w3-margin-top">
 
-                {% for o in evaluadores %}
+                {% for evaluador in evaluadores %}
                 <button class="w3-card w3-container w3-hover-shadow"
                     style="max-height:380px;min-height: 317px; max-width: 300px">
-                    <h3>{{ o.nombre }} {{ o.apellido }}</h3><br>
+                    <h3>{{ evaluador.nombre }} {{ evaluador.apellido }}</h3><br>
                     <i class="fas fa-user-alt" style="font-size:100px"></i>
-                    <p>{{ o.correo }}</p>
+                    <p>{{ evaluador.correo }}</p>
                 </button>
                 <div class="w3-margin">
 
-                    <form action="{% url 'evaluadores_admin_eliminar' o.correo %}">
+                    <form action="{% url 'evaluadores_admin_eliminar' evaluador.correo %}">
+                        <button class="w3-button w3-red w3-section w3-padding:10px" type="button"
+                                onclick="document.getElementById('modificar').style.display='block'">
+                                Modificar</button>
                         <button class="w3-button w3-red w3-section w3-padding:10px" type="submit">Eliminar</button>
                     </form>
                 </div>
 
+                    <div id="modificar" class="w3-modal">
+                            <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                                <div class="w3-center"><br>
+                                    <span onclick="document.getElementById('modificar').style.display='none'"
+                                        class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
+                                    <form id="form" method="POST" class="w3-container"
+                                        action="{% url 'evaluadores_admin_modificar' evaluador.correo %}">
+                                        {% csrf_token %}
+
+                                        <div class="w3-section">
+
+                                            <label><b>Nombre</b></label>
+                                            <input class="w3-input w3-border w3-margin-bottom" type="text"
+                                                   placeholder="Ingrese nombre" name="usrname"
+                                                   value="{{ evaluador.nombre }}" required>
+                                            <label><b>Apellido</b></label>
+                                            <input class="w3-input w3-border" type="text" placeholder="Ingrese apellido"
+                                                   name="apellido" value="{{ evaluador.apellido }}" required>
+                                            <label><b>Correo</b></label>
+                                            <input class="w3-input w3-border" type="text" placeholder="Ingrese correo"
+                                                   name="correo" value="{{ evaluador.correo }}" required>
+                                            <button class="w3-button w3-block w3-red w3-section w3-padding"
+                                                type="submit">Guardar Cambios</button>
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                    </div>
+                    <!--cierre de gestionar-->
                 {% endfor %}
 
-            </div>
-            <div id="gestionar" class="w3-modal">
+
+
 
             </div>
             <!--Caja de agregar-->
