--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
@@ -7,7 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'EvPresentaciones/style.css' %}">
 <link rel="stylesheet" href="{% static 'EvPresentaciones/w3.css' %}">
+<link rel="stylesheet" href="{% static 'EvPresentaciones/ficharubrica.css' %}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
   integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
