--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador-1.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubricaAdministrador-1.html
@@ -5,72 +5,128 @@
         <h1 class="w3-xxxlarge w3-text-red"><b>Ficha de rúbrica</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
+    <form>
+    {% comment %} <form method="POST" action="{% url 'modificar_rubrica' %}"> {% endcomment %}
+        {% comment %} {% csrf_token %} {% endcomment %}
+        <div class="w3-container">
+            <div class="w3-quarter">
+                <div class="form-inline">
+                    <label>Nombre</label>
+                    <input placeholder="Rúbrica Entrega 4" name="nombre-rubrica">
+                    
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="form-inline">
+                    <label>Tiempo mínimo</label>
+                    <input placeholder="5:00" name="t-min" style="width: 30%">
+                    
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="form-inline">
+                    <label>Tiempo máximo</label>
+                    <input placeholder="10:00" name="t-max" style="width: 30%">
+                    
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="form-inline">
+                    <label>Versión</label>
+                    <input placeholder="1.2" name="version" style="width: 30%">
+                    
+                </div>
+            </div>
+        </div>
 
-    <div class="w3-container">
-        <div class="w3-quarter">
-            <form class="form-inline">
-                <label>Nombre</label>
-                <input placeholder="Rúbrica Entrega 4" name="nombre-rubrica">
-                <button type="submit">Ok</button>
-            </form>
+        <div class="w3-container">
+            <table id="tabla-rubrica" class="orange">
+                <tr>
+                    <th></th>
+                    <th contenteditable='true'>0.0</th>
+                    <th contenteditable='true'>0.3</th>
+                    <th contenteditable='true'>0.7</th>
+                    <th contenteditable='true'>1.0</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th contenteditable='true'>Aspecto #1</th>
+                    <td contenteditable='true'>No cumple</td>
+                    <td contenteditable='true'>Cumple a penas</td>
+                    <td contenteditable='true'>Cumple decentemente</td>
+                    <td contenteditable='true'>Cumple en totalidad</td>
+                    <td><input type='button' class='button-add' value='Añadir fila' onclick="addRow()"></td>
+                </tr>
+                <tr>
+                    <th></th>
+                    <td><input type='button' class='button-add' value='Añadir columna' onclick="addCol()"></td>
+                    <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
+                    <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
+                    <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
-        <div class="w3-quarter">
-            <form class="form-inline">
-                <label>Tiempo mínimo</label>
-                <input placeholder="5:00" name="t-min" style="width: 30%">
-                <button type="submit">Ok</button>
-            </form>
-        </div>
-        <div class="w3-quarter">
-            <form class="form-inline">
-                <label>Tiempo máximo</label>
-                <input placeholder="10:00" name="t-max" style="width: 30%">
-                <button type="submit">Ok</button>
-            </form>
-        </div>
-        <div class="w3-quarter">
-            <form class="form-inline">
-                <label>Versión</label>
-                <input placeholder="1.2" name="version" style="width: 30%">
-                <button type="submit">Ok</button>
-            </form>
-        </div>
-    </div>
 
-    <div class="w3-container">
-        <table id="tabla-rubrica" class="orange">
-            <tr>
-                <th></th>
-                <th contenteditable='true'>0.0</th>
-                <th contenteditable='true'>0.3</th>
-                <th contenteditable='true'>0.7</th>
-                <th contenteditable='true'>1.0</th>
-                <th></th>
-            </tr>
-            <tr>
-                <th contenteditable='true'>Aspecto #1</th>
-                <td contenteditable='true'>No cumple</td>
-                <td contenteditable='true'>Cumple a penas</td>
-                <td contenteditable='true'>Cumple decentemente</td>
-                <td contenteditable='true'>Cumple en totalidad</td>
-                <td><input type='button' class='button-add' value='Añadir fila' onclick="addRow()"></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td><input type='button' class='button-add' value='Añadir columna' onclick="addCol()"></td>
-                <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
-                <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
-                <td><input type='button' class='button-delete DeleteCol' value='Borrar columna' onclick="removeCol(this)"></td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-
-    <div class="w3-row">
-        <button class="button1">Guardar rúbrica <i class="far fa-save"></i></button>
-    </div>
+        <input id"csv-text-id" type="text" style="display: block;" name="csv-text" value="">
+        
+        <div class="w3-row">
+            <button type="button" class="button1" onclick="saveRubrica();">Guardar rúbrica <i class="far fa-save"></i></button>
+        </div>
+    </form>
 
     <script>
+
+    function saveRubrica(){
+        if(validarRubrica()){
+            table2JSList();
+        };
+    }
+
+    function validarRubrica(){
+        var nombre = document.getElementsByName("nombre-rubrica")[0];
+        if(nombre.value == ""){
+            alert("Debe ingresar un nombre de Rúbrica");
+            return false
+        }
+        var tmin = document.getElementsByName("t-min")[0];
+        if(tmin.value == ""){
+            alert("Debe ingresar un tiempo mínimo");
+            return false
+        }
+        var tmax = document.getElementsByName("t-max")[0];
+        if(tmax.value == ""){
+            alert("Debe ingresar un tiempo máximo");
+            return false
+        }
+        var ver = document.getElementsByName("version")[0];
+        if(ver.value == ""){
+            alert("Debe ingresar una versión de la rúbrica");
+            return false
+        }
+        return true;
+    }
+
+    function table2JSList(){
+        var csv = [];
+	    var rows = document.querySelectorAll("table tr");
+	
+        for (var i = 0; i < rows.length - 1; i++) { // Sin botones
+		    var row = [];
+            var cols = rows[i].querySelectorAll("td, th");
+		
+            for (var j = 0; j < cols.length - 1; j++){ // Sin botones
+                row.push(cols[j].innerText);
+            }
+		    csv.push(row.join(","));		
+	    }
+        var csvText = csv.join("\n");
+        document.getElementsByName("csv-text")[0].value = csvText;
+
+        //alert(csvText);
+        // Download CSV
+        //download_csv(csv.join("\n"), filename);
+    }
 
     // Añade una fila al final antes de los botones de columna
     function addRow(){
