--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_detalle.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/ver_rubrica_detalle.html
@@ -7,109 +7,12 @@
     </div>
 
         <div class="w3-row w3-container">
-            <div class="w3-col">
-
-                <head>
-                    <style>
-                        .button2 {
-                            background-color: #c6bdbb;
-                            /* Green */
-                            border: none;
-                            color: black;
-                            padding: 15px 32px;
-                            text-align: center;
-                            text-decoration: none;
-                            display: inline-block;
-                            font-size: 16px;
-                            margin: 0.2px 2px;
-                            cursor: pointer;
-                        }
-
-                        .button2 {
-                            width: 50%;
-                            border-radius: 12px;
-                        }
-
-                        .button2.button2:hover {
-                            background-color: #FFA07A;
-                        }
-                    </style>
-                </head>
-            </div>
-
-            <div class="w3-col" align="right">
-
-                <head>
-
-                    <style>
-                        body {
-                            font-family: Arial, Helvetica, sans-serif;
-                        }
-
-                        .form-inline label {
-                            margin: 5px 0 5px 0;
-                        }
-
-                        .form-inline input {
-                            vertical-align: middle;
-                            margin: 5px 10px;
-                            padding: 5px;
-                            width: 10%;
-                            background-color: #fff;
-                            border: 1px solid #ddd;
-                        }
-
-                        .form-inline button {
-                            padding: 5px 10px;
-                            background-color: #c6bdbb;
-                            border: none;
-                            color: black;
-                            cursor: pointer;
-                            border-radius: 8px;
-                        }
-
-                        .form-inline button:hover {
-                            background-color: #FFA07A;
-                        }
-                    </style>
-                </head>
-
-                <body>
-                    <form class="form-inline" style="align: left">
-                        <label>Intervalo de presentación: {{ tmin }} - {{ tmax }}</label>
-                    </form>
-                </body>
+            <div class="w3-col" align="left">
+                    <label>Intervalo de presentación: {{ tmin }} - {{ tmax }}</label>
             </div>
         </div>
-
-
-        <head>
-            <style>
-                table {
-                    font-family: arial, sans-serif;
-                    border-collapse: collapse;
-                    width: 100%;
-                    cursor: pointer;
-                    margin: 10px 0.5% 0.5%;
-                }
-
-                td,
-                th {
-                    border: 1px solid #665f5f;
-                    text-align: left;
-                    width: 20%;
-                    padding: 2.3%;
-                }
-
-                tr:nth-child(even) {
-                    background-color: #FFA07A;
-                }
-            </style>
-        </head>
-
-        <body>
-            <table>
-
+        <div class="w3-container">
+            <table class="orange">
                 {% for r in lineas %}
                 <tr>
                     {% for a in r %}
@@ -117,63 +20,7 @@
                     {% endfor %}
                 </tr>
                 {% endfor %}
-
             </table>
-        </body>
-
-        <div>
-
-            <head>
-                <style>
-                    .btn-group .button {
-                        background-color: #c6bdbb;
-                        border: none;
-                        color: black;
-                        padding: 15px 4.6%;
-                        text-align: center;
-                        text-decoration: none;
-                        display: inline-block;
-                        font-size: 16px;
-                        cursor: pointer;
-                        float: left;
-                        margin: 18px 2%;
-                    }
-
-                    .btn-group .button {
-                        border-radius: 12px;
-                    }
-
-                    .btn-group .button:hover {
-                        background-color: #FFA07A;
-                    }
-                </style>
-            </head>
-
         </div>
 
-        <head>
-            <style>
-                .button1 {
-                    background-color: #BF1010;
-                    border: none;
-                    color: white;
-                    padding: 45px;
-                    text-align: center;
-                    text-decoration: none;
-                    display: inline-block;
-                    font-size: 16px;
-                    margin: 10px 78%;
-                    cursor: pointer;
-                }
-
-                .button1 {
-                    border-radius: 12px;
-                }
-
-                .button1.button1:hover {
-                    background-color: #FFA07A;
-                }
-            </style>
-        </head>
-
-        {% endblock %}
+{% endblock %}
